# dining_philosophers

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
dphCore/: CMakeLists.txt
dphCore/src/: dinner.cpp  dinner.h  philosopher.cpp  philosopher.h  philparameters.h  status.h
dphCore/test/: CMakeLists.txt  philparameters.tests.cpp  philparameters_Tests.cpp  test_main.cpp
dphGui/: CMakeLists.txt
dphGui/src/: dinnerscenemanager.cpp  dinnerscenemanager.h  dinnersettingswidget.cpp  dinnersettingswidget.h  icon.rc  logwidget.cpp  logwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  scenesettingswidget.cpp  scenesettingswidget.h  settings.h  settingsdialog.cpp  settingsdialog.h  settingsserializer.cpp  settingsserializer.h  visualsettingswidget.cpp  visualsettingswidget.h
dphGui/src/settings/: dinnersettingswidget.h  scenesettingswidget.cpp  visualsettingswidget.cpp
dphGui/src/translations/: english.ts  russian.ts
include/dphCore/: dinner.h  dinnersettings.h  dphCore_global.h  philevent.h  philosopher.h  philparameters.h  status.h
scripts/: controlscript.qs  packagescript.qs
src/dphCore/: philosopher.cpp  philosopher.h  philparameters.h  status.h
